--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,111 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  line-height: 23px;
+  color: #2f4f4f;
+}
 
+body {
+  margin: 0;
+}
+
+.people {
+  max-width: 900px;
+  padding: 30px;
+  margin: 30px auto 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 210px));
+
+  justify-content: space-between;
+  justify-self: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .people {
+    max-width: 450px;
+  }
+}
+
+.person {
+  width: 210px;
+  padding-top: 10px;
+
+  border-radius: 10px;
+  /* border: 1px solid lightblue; */
+  transition: all 1s ease-in-out;
+}
+
+.person__img {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+  object-fit: cover;
+  object-position: center;
+
+  border-radius: 50%;
+  transition: border 1s ease-in-out;
+}
+.person__photo {
+  position: relative;
+}
+
+.person__rank {
+  color: #8b0000;
+  font-size: 16px;
+  line-height: 32px;
+  font-weight: 700;
+  text-align: center;
+
+  width: 32px;
+  height: 32px;
+
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translate(0, -50%);
+
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.person__details {
+  text-align: center;
+  padding-top: 10px;
+  border-radius: 12px 0 0 12px;
+}
+
+.person__name {
+  font-weight: 700;
+}
+
+.person__extra {
+  color: #000;
+  font-size: 18px;
+  font-weight: 300;
+  opacity: 0;
+}
+
+.person__pay::before {
+  content: "$";
+}
+
+.person__pay::after {
+  content: "M";
+}
+
+.person:hover {
+  background-color: #eee;
+  border-radius: 12px;
+  transform: scale(1.2);
+  z-index: 1;
+}
+
+.person:hover .person__img {
+  border-radius: 50px;
+}
+
+.person:hover .person__extra {
+  margin-top: 11px;
+  opacity: 1;
+}
