--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,13 @@ body {
   margin: 0;
 }
 
+article,
+section,
+span,
+img {
+  box-sizing: border-box;
+}
+
 .people {
   max-width: 900px;
   padding: 30px;
@@ -28,11 +35,9 @@ body {
 }
 
 .person {
-  width: 210px;
-  padding-top: 10px;
+  width: fit-content;
 
   border-radius: 10px;
-  /* border: 1px solid lightblue; */
   transition: all 1s ease-in-out;
 }
 
@@ -44,10 +49,12 @@ body {
   object-position: center;
 
   border-radius: 50%;
-  transition: border 1s ease-in-out;
+  transition: border-radius 1s ease-in-out;
 }
+
 .person__photo {
   position: relative;
+  padding: 10px 10px 0;
 }
 
 .person__rank {
@@ -61,7 +68,7 @@ body {
   height: 32px;
 
   position: absolute;
-  right: 10px;
+  right: 20px;
   top: 50%;
   transform: translate(0, -50%);
 
@@ -83,7 +90,11 @@ body {
   color: #000;
   font-size: 18px;
   font-weight: 300;
+
+  margin-top: 8px;
+
   opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
 .person__pay::before {
@@ -106,6 +117,5 @@ body {
 }
 
 .person:hover .person__extra {
-  margin-top: 11px;
   opacity: 1;
 }
